--- a/myapplication3/build.gradle
+++ b/myapplication3/build.gradle
@@ -18,7 +18,7 @@ android {
             ldLibs "log", "z", "m"
 
             abiFilters "arm64-v8a", "x86"
-            stl "stlport_static"//Added
+//            stl "stlport_static"//Added
             ldLibs "log"
 
         }
@@ -26,10 +26,10 @@ android {
 
 
     buildTypes {
-        /*Added*/
-        debug{
-            jniDebuggable true
-        }
+//        /*Added*/
+//        debug{
+//            jniDebuggable true
+//        }
         /*End*/
         release {
             minifyEnabled false
@@ -52,4 +52,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
 }
