--- a/myapplication3/build.gradle
+++ b/myapplication3/build.gradle
@@ -13,11 +13,11 @@ android {
         multiDexEnabled true
         ndk {
 
-            moduleName"myNativeLib"
+            moduleName "myNativeLib"
 
             ldLibs "log", "z", "m"
 
-            abiFilters "arm64-v8a", "x86"
+            abiFilters "arm64-v8a", "x86", "armeabi"
 //            stl "stlport_static"//Added
             ldLibs "log"
 
