JNI.1.2.8.161212_Mr.Cheng

--- a/myapplication3/build.gradle
+++ b/myapplication3/build.gradle
@@ -18,7 +18,7 @@ android {
             ldLibs "log", "z", "m"
 
             abiFilters "arm64-v8a", "x86", "armeabi"
-//            stl "stlport_static"//Added
+            stl "stlport_static"//Added
             ldLibs "log"
 
         }
@@ -26,10 +26,10 @@ android {
 
 
     buildTypes {
-//        /*Added*/
-//        debug{
-//            jniDebuggable true
-//        }
+        /*Added*/
+        debug{
+            jniDebuggable true
+        }
         /*End*/
         release {
             minifyEnabled false
