--- a/myapplication3/src/main/AndroidManifest.xml
+++ b/myapplication3/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".TestActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
     </application>
 
